--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -3,15 +3,15 @@
 {{ define "headcss" }}
 {{$.Scratch.Set "nav_active" "blog"}}
 {{$.Scratch.Set "data_i18_link" "/blog-cn" }}
-<link href="/css/bloglist.css" rel="stylesheet">
+<!-- <link href="/css/bloglist.css" rel="stylesheet"> -->
 {{ end }}
 
 {{ define "main" }}
-<div class="container">
-    <div class="row">
-        <div class="col-md-4 nav nav-tags">
+<div class="blog">
+    <div class="container">
+        <div class="nav nav-tags">
           {{ $posts := where (where .Site.Pages "Section" "blog-cn") ".Params.title" "!=" nil  }}
-            <h1 class="title">Hot Tags <a class="rss fa fa-rss" href="/rss/feed-cn.xml" title="RSS Feed"></a></h1>
+            <h1 class="title">Hot Tags <a class="rss fa fa-rss" href="/rss/feed-cn.xml" title="RSS Feed">{{ partial "svgs/icon-rss.svg" (dict "fill" "#3A59F0" "width" 13 "height" 17 ) }}</a></h1>
             <a href="/bloglist-zh.html" class="all">ALL ({{ len $posts }})</a>
             <ul class="tag-list f-cb">
                 {{/*
@@ -40,7 +40,7 @@
                  */}}
             </ul>
         </div>
-        <div class="col-md-8 list">
+        <div class="list">
             {{ range .Data.Pages.ByDate.Reverse }}
               <!-- <li><h2>{{ .Title }}</h2></li> -->
                 <!-- {{ .Render "li"}} -->
