--- a/layouts/meetup/list.html
+++ b/layouts/meetup/list.html
@@ -1,17 +1,16 @@
 {{ define "headcss" }}
 {{$.Scratch.Set "nav_active" "meetup"}}
 {{$.Scratch.Set "data_i18_cn" true }}
-<link href="/css/meetup.css" rel="stylesheet">
+<!-- <link href="/css/meetup.css" rel="stylesheet"> -->
 <style type="text/css" media="screen">
-.page > header {
+body > header {
    padding-bottom: 0!important;
 }
 </style>
 {{ end }}
 
 {{ define "main" }}
-<div class="meetup">
-  <section class="banner mkdf-iwt-layout-text-on-hover">
+  <section class="meetup-landingpage-banner mkdf-iwt-layout-text-on-hover">
     <!-- TODO: sign up url -->
     <a href="http://path/to/signup" class="mkdf-iwt-link-abs" target="_blank"></a>
     <!-- <a href="http://path/to/detail" class="mkdf-iwt-link-abs" target="_blank"></a> -->
@@ -29,7 +28,7 @@
       <!-- <h3 class="mkdf-iwt-title"> 查看详情 </h3> -->
     </div>
   </section>
-  <section class="intro">
+  <section class="meetup-landingpage-intro">
     <div class="container">
       <div class="text">
         <h1 class="title"> Infra Meetup</h1>
@@ -39,7 +38,7 @@
       </div>
     </div>
   </section>
-  <section class="review">
+  <section class="meetup-landingpage-review">
     <div class="container">
       <div class="text">
         <h1 class="title">往期回顾</h1>
@@ -70,7 +69,7 @@
       </div>
     </div>
   </section>
-  <section class="memoir">
+  <section class="meetup-landingpage-memoir">
     <div class="container">
       <h1 class="title">分享实录</h1>
       <div class="hover-list">
@@ -85,7 +84,7 @@
       <a href="./memoir/list.html" class="link">查看更多<i class="fa fa-long-arrow-right"></i></a>
     </div>
   </section>
-  <section class="lecturer">
+  <section class="meetup-landingpage-lecturer">
     <div class="container">
       <div class="text">
         <h1 class="title">大咖讲师</h1>
@@ -116,11 +115,10 @@
       </div>
     </div>
   </section>
-  <section class="banner banner-footer">
+  <section class="meetup-landingpage-banner meetup-landingpage-banner-footer">
     <div class="mkdf-iwt-image">
       <img src="https://previews.123rf.com/images/masterart/masterart1410/masterart141000010/32795161-A-word-cloud-of-database-related-items-Stock-Vector.jpg" alt="">
     </div>
   </section>
-</div>
 
 {{ end }}
