--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -8,12 +8,26 @@
 @text-color: #3e3e3e;
 
 /** documentation list **/
-.doc-container {
-  flex-direction: row;
+.doc,
+.blog,
+.meetup {
+  .container {
+    flex-direction: row;
+    flex-flow: wrap;
+  }
+
+  .nav {
+    flex-basis: 30%;
+  }
+
+  .list,
+  .archive {
+    flex-basis: 70%;
+  }
 }
 .list {
-  .item {
-    margin: 8px 0;
+  // .item {
+  //   margin: 8px 0;
     .content {
       h1,
       h2,
@@ -164,30 +178,30 @@
         }
       }
     }
-  }
+  // }
 }
 
-.doc,
-.blog {
-  width: 100%;
-  & a {
-    text-decoration: none;
-  }
-  .page {
-    min-height: 100vh;
-    padding-top: 5rem;
-  }
-}
+// .doc,
+// .blog {
+//   width: 100%;
+//   & a {
+//     text-decoration: none;
+//   }
+//   .page {
+//     min-height: 100vh;
+//     padding-top: 5rem;
+//   }
+// }
 
 @media (max-width: 768px) {
-  .list {
-    margin-left: 0;
-  }
-  .blog .list-comments .item .pic {
-    display: block;
-    margin: auto;
-  }
-  .doc .list .item .operate .col-md-3 {
-    margin: 5px 0;
-  }
+  // .list {
+  //   margin-left: 0;
+  // }
+  // .blog .list-comments .item .pic {
+  //   display: block;
+  //   margin: auto;
+  // }
+  // .doc .list .item .operate .col-md-3 {
+  //   margin: 5px 0;
+  // }
 }
