--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -42,7 +42,7 @@
   }
 
   .btn-lang {
-    padding: 0 8px;
+    padding: 2px 8px;
     border: 1px solid @white;
     .rounded-corners(2px);
     line-height: 1.7;
@@ -116,7 +116,6 @@
   .qr_code_outer {
     position: absolute;
     right: 130px;
-    // top: 50%;
     margin-top: -90px;
     text-align: center;
     .qr_code_inner {
