--- a/src/less/index.less
+++ b/src/less/index.less
@@ -4,8 +4,8 @@
 @import './footer.less';
 
 // box
-@logo_wodth: 210px;
-@logo_height: 80px;
+@logo_wodth: 10.5rem;
+@logo_height: 4rem;
 @header_height: calc(~'1.5rem + '@nav_height);
 @button_height: 1.8rem;
 @advantage_row_margin: 4rem;
@@ -22,12 +22,12 @@
 // others
 @line_height: 1.8;
 
-.page {
+// .page {
   .container {
     display: flex;
   }
   /* Section 1 */
-  .slogan-mask {
+  .landingpage-slogan-mask {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -89,7 +89,7 @@
         line-height: @button_height;
         width: 7.2rem;
         padding: 0 1rem;
-        .rounded-corners(18px);
+        .rounded-corners(0.9rem);
         margin-top: 2.25rem;
         font-size: 0.8rem;
         text-align: center;
@@ -131,7 +131,7 @@
     }
   }
   /* Section 2 */
-  .features {
+  .landingpage-features {
     padding: calc(~'6rem + '@header_height) @horizontal_padding;
     background: url('/images/features-mask.png') no-repeat center top;
     background-attachment: fixed;
@@ -156,7 +156,7 @@
       margin-top: 3rem;
       flex-basis: 33%;
       p {
-        max-width: 240px;
+        max-width: 12rem;
         margin-left: auto;
         margin-right: auto;
         font-size: @text_size;
@@ -168,14 +168,14 @@
     }
     .item-short {
       p {
-        max-width: 210px;
+        max-width: 10.5rem;
         margin-left: auto;
         margin-right: auto;
       }
     }
     .item-long {
       p {
-        max-width: 270px;
+        max-width: 13.5rem;
         margin-left: auto;
         margin-right: auto;
       }
@@ -199,7 +199,7 @@
     }
   }
   /* Section 3 */
-  .advantages {
+  .landingpage-advantages {
     padding: calc(~'6rem + '@header_height) @horizontal_padding 10rem;
     background: url('/images/advantages-mask.png') no-repeat center bottom
       @dark_blue;
@@ -256,45 +256,45 @@
       }
     }
   }
-}
+// }
 
 @media (max-width: 500px) {
-  .page .slogan-mask {
+  .landingpage-slogan-mask {
     padding-top: 12rem;
   }
-  .page .slogan-mask .container {
+  .landingpage-slogan-mask .container {
     align-items: center;
     text-align: center;
   }
-  .page .slogan-mask .buttons {
+  .landingpage-slogan-mask .buttons {
     max-width: 100%;
     width: 90%;
     justify-content: space-around;
   }
-  .page .features .item {
+  .landingpage-features .item {
     flex-basis: 100%;
   }
-  .page .features .row-1 .item {
+  .landingpage-features .row-1 .item {
     margin-top: 3rem;
   }
-  .page .slogan-mask .desc {
+  .landingpage-slogan-mask .desc {
     max-width: 100%;
   }
-  .page .advantages .row,
-  .page .advantages .row:nth-child(2n) {
+  .landingpage-advantages .row,
+  .landingpage-advantages .row:nth-child(2n) {
     justify-content: center;
     flex-wrap: wrap;
     .content {
       text-align: center;
     }
   }
-  .page .advantages .row .content {
+  .landingpage-advantages .row .content {
     flex-basis: 100%;
   }
 }
 
 @media (max-width: 320px) {
-  .page .slogan-mask .buttons {
+  .landingpage-slogan-mask .buttons {
     flex-direction: column;
     align-items: center;
   }
