--- a/src/less/meetup.less
+++ b/src/less/meetup.less
@@ -7,7 +7,7 @@
 @red: #ff2c54;
 @link-blue: #202884;
 
-.meetup {
+// .meetup {
   ul {
     margin: 0;
     padding: 0;
@@ -160,7 +160,7 @@
     }
   }
 
-  .banner {
+  .meetup-landingpage-banner {
     position: relative;
     overflow: hidden;
     width: 100%;
@@ -216,11 +216,11 @@
     letter-spacing: 2px;
   }
 
-  .intro {
+  .meetup-landingpage-intro {
     padding-top: 6rem;
   }
 
-  .review {
+  .meetup-landingpage-review {
     padding-top: 6rem;
 
     .item {
@@ -238,8 +238,8 @@
     }
   }
 
-  .memoir {
-    background: @gray;
+  .meetup-landingpage-memoir {
+    background: @bg_gray_white;
     padding: 6rem 0 2.5rem;
     box-sizing: border-box;
 
@@ -278,7 +278,7 @@
     }
   }
 
-  .lecturer {
+  .meetup-landingpage-lecturer {
     padding-top: 6rem;
 
     .item {
@@ -328,7 +328,7 @@
     }
   }
 
-  .banner-footer {
+  .meetup-landingpage-banner-footer {
     background-color: #fff;
     padding: 2.5rem;
 
@@ -340,4 +340,4 @@
     }
   }
   // }
-}
+// }
