--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,8 +1,6 @@
-// @import './header.less';
-// @import './footer.less';
 @import './index.less';
-@import './doc.less';
-@import './blog.less';
 @import './about.less';
-@import './bloglist.less';
 @import './meetup.less';
+@import './doc.less';
+// @import './blog.less';
+@import './bloglist.less';
