--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,61 +1,62 @@
-{{ define "headcss" }} {{$.Scratch.Set "nav_active" "blog"}} {{$.Scratch.Set "data_i18_link" "/blog-cn" }}
-<link href="/css/doc.css" rel="stylesheet">
-<link href="/css/blog.css" rel="stylesheet"> {{ end }} {{ define "main" }}
-<div class="container">
-    <div class="row">
+{{ define "headcss" }}
+{{$.Scratch.Set "nav_active" "blog"}}
+{{$.Scratch.Set "data_i18_link" "/blog-cn" }}
+<!-- <link href="/css/doc.css" rel="stylesheet">
+<link href="/css/blog.css" rel="stylesheet"> -->
+{{ end }}
 
-        <div class="col-md-4 nav nav-tree" id="st-tree">
-            <h1 class="title"> Blog </h1>
-            <div class="st_tree" id="doc-nav">
-                {{ $blogs := where (where .Site.Pages "Section" "blog-cn") ".Params.title" "!=" nil }}
-                <ul>
-                    {{ range $blogs.GroupByDate "2006" }}
-                    <li><a href="#">{{ .Key }} ({{ len .Pages }})</a></li>
-                    <ul>
-                        {{ range .Pages.GroupByDate "2006-01" }}
-                        <li><a href="#">{{ .Key }} ({{ len .Pages }})</a></li>
-                        <ul>
-                            {{ range .Pages }}
-                            <li><i class="icon"></i><a href="{{ .URL }}">{{ .Title }}</a></li>
-                            {{ end }}
-                        </ul>
-                        {{ end }}
-                    </ul>
-                    {{ end }}
-                </ul>
-            </div>
-        </div>
-
-
-        <div class="col-md-8 list">
-            <div class="item">
-                <div class="content">
-                    <h1 class="title">{{ .Title }}</h1>
-                    <ul class="blog-post-meta">
-                        <li class="meta-item">
-                          {{ partial "svgs/icon-date.svg" (dict "fill" "#040000" "width" 14 "height" 16 ) }}
-                          {{ .Date.Format "Mon, Jan 2, 2006" }}
-                        </li>
-                        <li class="meta-item">
-                          {{ partial "svgs/icon-author.svg" (dict "fill" "#040000" "width" 18 "height" 18 ) }}
-                          {{ .Params.author }}
-                        </li>
-                    </ul>
-                    <div class="blog-text">{{ .Content }}</div>
-                </div>
-
-                <div class="operate">
-                    <div class="row">
-                        <div class="f-thide">
-                            <a href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.pingcap.com%2f$url$" class="link_icon">
-                              <i class="icon">{{ partial "svgs/icon-share.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i>Share
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+{{ define "main" }}
+<div class="blog">
+  <div class="container">
+    <div class="nav nav-tree" id="st-tree">
+      <h1 class="title"> Blog </h1>
+      <div class="st_tree" id="doc-nav">
+        {{ $blogs := where (where .Site.Pages "Section" "blog-cn") ".Params.title" "!=" nil }}
+        <ul>
+          {{ range $blogs.GroupByDate "2006" }}
+          <li><a href="#">{{ .Key }} ({{ len .Pages }})</a></li>
+          <ul>
+            {{ range .Pages.GroupByDate "2006-01" }}
+            <li><a href="#">{{ .Key }} ({{ len .Pages }})</a></li>
+            <ul>
+              {{ range .Pages }}
+              <li><i class="icon"></i><a href="{{ .URL }}">{{ .Title }}</a></li>
+              {{ end }}
+            </ul>
+            {{ end }}
+          </ul>
+          {{ end }}
+        </ul>
+      </div>
     </div>
+
+    <div class="archive">
+      <div class="content">
+        <h1 class="title">{{ .Title }}</h1>
+        <ul class="blog-post-meta">
+          <li class="meta-item">
+            {{ partial "svgs/icon-date.svg" (dict "fill" "#040000" "width" 14 "height" 16 ) }} {{ .Date.Format "Mon, Jan 2, 2006" }}
+          </li>
+          <li class="meta-item">
+            {{ partial "svgs/icon-author.svg" (dict "fill" "#040000" "width" 18 "height" 18 ) }} {{ .Params.author }}
+          </li>
+        </ul>
+        <div class="blog-text">{{ .Content }}</div>
+      </div>
+
+      <div class="operate">
+        <div class="row">
+          <div class="item">
+            <a href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.pingcap.com%2f$url$" class="link_icon">
+              <i class="icon">{{ partial "svgs/icon-share.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i>Share
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
-{{ end }} {{ define "footjs" }} {{ end }}
+{{ end }}
+
+{{ define "footjs" }} {{ end }}
