--- a/layouts/docs-cn/list.html
+++ b/layouts/docs-cn/list.html
@@ -2,50 +2,50 @@
 {{$.Scratch.Set "nav_active" "docs"}}
 {{$.Scratch.Set "data_i18_cn" true }}
 {{$.Scratch.Set "data_i18_link" "/docs" }}
-<link href="/css/doc.css" rel="stylesheet">
+<!-- <link href="/css/doc.css" rel="stylesheet"> -->
 {{ end }}
 
 {{ define "main" }}
-<div class="container">
-<div class="row">
-  <div class="col-md-4 nav nav-tree">
-    <h1 class="title"> 文档 </h1>
-    <div class="st_tree">
-      {{ partial "tree-nav.html" (dict "tree" .Site.Data.docs_cn_toc "global" .) }}
+<div class="doc">
+  <div class="container">
+    <div class="nav nav-tree">
+      <h1 class="title"> 文档 </h1>
+      <div class="st_tree" id="st-tree">
+        {{ partial "tree-nav.html" (dict "tree" .Site.Data.docs_cn_toc "global" .) }}
+      </div>
+    </div>
+
+      <div class="archive">
+          <div class="content">{{ readFile "/content/docs-cn/overview.md" | markdownify }}</div>
+
+          <div class="draw">
+            <img src="https://download.pingcap.com/images/docs-simple.png" width="100%">
+          </div>
+
+          <div class="operate">
+              <div class="item">
+                  <a href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.pingcap.com%2f$url$" class="link_icon">
+                    <i class="icon">{{ partial "svgs/icon-share.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i>分享
+                  </a>
+              </div>
+              <div class="item" onclick="window.print();">
+                  <a href="javascript:;" class="link_icon">
+                    <i class="icon">{{ partial "svgs/icon-print.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i>打印
+                  </a>
+              </div>
+              <div class="item">
+                  <a href="http://download.pingcap.org/tidb-manual-cn.pdf" class="link_icon" download="tidb-manual-cn.pdf">
+                    <i class="icon">{{ partial "svgs/icon-download.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i>下载
+                  </a>
+              </div>
+              <div class="item">
+                  <a href="mailto:info@pingcap.com" class="link_icon">
+                    <i class="icon icon-mail">{{ partial "svgs/icon-feedback.svg" (dict "fill" "#040000" "width" 22 "height" 17 ) }}</i>反馈
+                  </a>
+              </div>
+          </div>
+
     </div>
   </div>
-
-    <div class="col-md-8 list">
-        <div class="content">{{ readFile "/content/docs-cn/overview.md" | markdownify }}</div>
-
-        <div class="draw">
-          <img src="https://download.pingcap.com/images/docs-simple.png" width="100%">
-        </div>
-
-        <div class="operate">
-            <div class="col-xs-12 col-sm-3 col-md-3 f-thide">
-                <a href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.pingcap.com%2f$url$" class="link_icon">
-                  <i class="icon">{{ partial "svgs/icon-share.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i>分享
-                </a>
-            </div>
-            <div class="col-xs-12 col-sm-3 col-md-3 f-thide" onclick="window.print();">
-                <a href="javascript:;" class="link_icon">
-                  <i class="icon">{{ partial "svgs/icon-print.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i>打印
-                </a>
-            </div>
-            <div class="col-xs-12 col-sm-3 col-md-3 f-thide">
-                <a href="http://download.pingcap.org/tidb-manual-cn.pdf" class="link_icon" download="tidb-manual-cn.pdf">
-                  <i class="icon">{{ partial "svgs/icon-download.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i>下载
-                </a>
-            </div>
-            <div class="col-xs-12 col-sm-3 col-md-3 f-thide">
-                <a href="mailto:info@pingcap.com" class="link_icon">
-                  <i class="icon icon-mail">{{ partial "svgs/icon-feedback.svg" (dict "fill" "#040000" "width" 22 "height" 17 ) }}</i>反馈
-                </a>
-            </div>
-        </div>
-
-  </div>
-</div>
 </div>
 {{ end }}
