--- a/layouts/page/index-cn.html
+++ b/layouts/page/index-cn.html
@@ -2,6 +2,16 @@
 {{$.Scratch.Set "data_i18_cn" true }}
 {{$.Scratch.Set "data_i18_link" "/en" }}
 <style type="text/css" media="screen">
+    body {
+        background-image: linear-gradient(to top, #080000, #100f2e) !important;
+        color: #fff !important;
+    }
+
+    body p {
+      font-family: 'Lato Light' !important;
+      font-weight: 300 !important;
+    }
+
     header {
         position: fixed;
         background-color: rgba(0, 0, 0, 0) !important;
@@ -11,21 +21,11 @@
     header.fixed-top {
         background-color: rgba(0, 0, 0, 0.9) !important;
     }
-
-    .page {
-        background-image: linear-gradient(to top, #080000, #100f2e) !important;
-        color: #fff !important;
-    }
-
-    .page p {
-      font-family: 'Lato Light' !important;
-      font-weight: 300 !important;
-    }
 </style>
 {{ end }}
 
 {{ define "main" }}
-<section class="slogan-mask">
+<section class="landingpage-slogan-mask">
     <div class="container">
         <img class="logo" src="https://download.pingcap.com/images/tidb-logo.png" alt="TiDB">
         <h2 class="slogan">SQL at SCALE</h2>
@@ -39,7 +39,7 @@
         </div>
     </div>
 </section>
-<section class="features">
+<section class="landingpage-features">
     <div class="container">
         <div class="row row-1">
             <div class="item">
@@ -89,7 +89,7 @@
         </div>
     </div>
 </section>
-<section class="advantages">
+<section class="landingpage-advantages">
     <div class="container">
         <div class="row">
             <div class="image-wrap">
