--- a/src/less/bloglist.less
+++ b/src/less/bloglist.less
@@ -8,7 +8,7 @@
 @min-height: 1100px;
 @font-color: #3e3e3e;
 @blue: #3a59f0;
-.bloglist {
+.blog {
   // width: 100%;
   color: @font-color;
   & a {
